# multiplayer_2

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.cpp  build_2.cpp  build_compile.bat  build_full.bat  build_p.bat  build_r.bat  clean.bat  compile.bat  copy_assets.bat  pch.bat
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
scripts/: base_path.py  compile_shaders.py  define_assets.py  run.ps1
shaders/: color_texture.frag  pos_color_uv.vert  pos_uv.vert  raw_vertex_buffer.vert  rect.frag  rect.vert  solid_color.frag  sprite.frag  sprite.vert  textured_rect.frag  textured_rect.vert  textured_rects.vert  wire_rect.frag  wire_rect.vert  world_textured_rect.vert
src/: app.cpp  color.h  context.h  font.cpp  font.h  input.cpp  input.h  main.cpp  pch.h  renderer.cpp  renderer.h  test.cpp
src/assets/: assets.h  inc.h
src/assets/codegen/: image_table.h  shader_table.h  shaders.h
src/base/: base_arena.c  base_arena.h  base_containers.c  base_containers.h  base_context_cracking.h  base_core.c  base_core.h  base_inc.c  base_inc.h  base_math.c  base_math.h  base_strings.c  base_strings.h
src/client/: app.c  app.cpp  app.h  assets.h  client.cpp  client.cppx  client.h  client.hx  color.h  dev_macros.h  event.h  exports.h  font.c  font.cpp  font.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h  input.c  input.cpp  input.h  main.cpp  panic.h  renderer.c  renderer.cpp  renderer.h  scene.c  scene.cpp  scene.h  test.cpp  test_dll.cpp  test_dll.h  ui.c  ui.cpp  ui.h
src/client/codegen/: assets.h  font_table.h  image_table.h  shaders.h
src/codegen/: assets.h  shaders.h
src/common/: allocator.cpp  allocator.h  base_math.cpp  base_math.h  game.c  game.cpp  game.h  game_server.cpp  game_server.h  inc.c  inc.cpp  inc.h  net_common.c  net_common.cpp  net_common.h  server.c  types.h
src/os/: os.c  os.h
src/platform/: app.c  app.cpp  main.c  main.cpp
src/server/: .main.cppx  .server.cppx  .server.hx  main.c  main.cpp  server.cpp  server.h
